--- a/rm-custom-login-share-jar/pom.xml
+++ b/rm-custom-login-share-jar/pom.xml
@@ -3,9 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>rm-custom-login-share-jar</artifactId>
-    <name>Alfresco Share JAR Module</name>
+    <name>Region Midt Custom Login</name>
     <packaging>jar</packaging>
-    <description>Sample Share JAR Module (to be included in the share.war) - part of AIO - SDK 3</description>
+    <description>Set Alfresco login prompt to RM look and feel</description>
 
     <parent>
         <groupId>dk.magenta.rm.login</groupId>
